[workspace]
resolver = "3"
members = [
    "graft",
    "xtask"
]

[workspace.package]
authors = ["Chris Tisdale"]
readme = "README.md"
rust-version = "1.96.0"
repository = "https://github.com/ChrisTisdale/graftfs"
license = "GPL-3.0-or-later"
edition = "2024"

[profile.release]
lto = true
strip = true
