[package]
name = "graftfs"
version = "1.2.1"
authors = ["Chris Tisdale"]
rust-version = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
resolver = "3"
description = "A Rust implementation of the GNU stow utility for managing dotfiles. It is a symlink farm manager that takes separate packages of software and/or data and makes them appear to be installed in the same place. Features include stow, delete, and restow operations, simulation mode, directory folding, and regex-based ignore/override patterns."
keywords = ["dotfiles", "stow", "symlink", "configuration"]
documentation = "https://docs.rs/graftfs"
categories = ["command-line-utilities", "config", "filesystem"]
publish = true
exclude = [
    "/.github/",
    "/.gitignore",
    "/.vscode/",
    "/.idea/",
    "src/lib.rs",
]

[lib]
name = "graft"
path = "src/lib.rs"

[[bin]]
name = "graft"
path = "src/main.rs"

[features]
default = []
nushell = ["clap_complete_nushell"]

[dependencies]
clap = { version = "4.6.2", features = ["color", "derive", "error-context", "help", "suggestions", "unicode", "wrap_help", "usage"] }
clap_complete = { version = "4.6.7" }
clap_complete_nushell = { version = "4.6.1", optional = true }
crossterm = { version = "0.29.0", features = ["serde"] }
grep = { version = "0.4.1", features = ["pcre2"] }
serde = { version = "1.0.229", features = ["derive"] }
snafu = { version = "0.9.1" }
supports-color = { version = "3.0.2" }
toml = { version = "1.1.3" }
tracing = { version = "0.1.44" }
tracing-appender = { version = "0.2.5" }
tracing-subscriber = { version = "0.3.23", features = ["json"] }
