[package]
name = "xtask"
version = "1.0.0"
authors = ["Chris Tisdale"]
edition = "2024"
publish = false

[dependencies.graftfs]
path = "../graft"

[dependencies]
anyhow = { version = "1.0.104" }
clap = { version = "4.6.2", features = ["color", "derive", "error-context", "help", "suggestions", "unicode", "wrap_help", "usage"] }
clap_mangen = { version = "0.3.0" }
